# vscode-zc-buildout

./: .eslintrc.js  .gitignore  .prettierignore  .vscodeignore  AGENTS.md  LICENSE.txt  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  tslint.json
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yaml  publish-extension.yaml  publish-pypi.yaml  pythonpackage.yml  tree-sitter.yaml  vscodeextension.yml
client/: package-lock.json  package.json  tsconfig.json
profiles/: buildout.cfg  ok.cfg  template.in
server/: CHANGELOG.md  LICENCE.txt  README.md  genstubs.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
server/buildoutls/: aiohttp_session.py  buildout.py  cli.py  code_actions.py  commands.py  diagnostic.py  jinja.py  md5sum.py  profiling.py  protocol.py  protocol_recorder.py  pypi.py  recipes.py  semantic_tokens.py  server.py  types.py  utils.py
server/buildoutls/bench/: slapos.py
server/buildoutls/tests/: conftest.py  test_buildout_parser.py  test_code_actions.py  test_completion.py  test_definition.py  test_diagnostics.py  test_document_link.py  test_document_symbol.py  test_hover.py  test_jinja.py  test_language_server.py  test_protocol.py  test_references.py  test_slapos.py
server/buildoutls/tests/testdata/: sampleproject-1.2.0.json  sampleproject-1.3.0.json  sampleproject-9.9.9.json
server/buildoutls/util/: md5sum.py  pypi.py
server/src/buildoutls/: buildout.py  cli.py  code_actions.py  diagnostic.py  jinja.py  profiling.py  server.py  types.py
server/src/buildoutls/bench/: slapos.py
server/src/buildoutls/tests/: conftest.py  test_buildout_parser.py  test_code_actions.py  test_completion.py  test_definition.py  test_diagnostics.py  test_document_link.py  test_document_symbol.py  test_hover.py  test_jinja.py  test_references.py  test_semantic_tokens.py  test_slapos.py
server/src/buildoutls/tests/testdata/: notfound.json  sampleproject-2.0.0.json
server/src/buildoutls/util/: aiohttp_session.py  md5sum.py  pypi.py
server/stubs/setuptools/: __init__.pyi  package_index.pyi
server/stubs/zc/buildout/: __init__.pyi  buildout.pyi  configparser.pyi  download.pyi  easy_install.pyi  rmtree.pyi
syntaxes/: jinja+zc.buildout.tmGrammar.json  zc.buildout.tmGrammar.json
tree-sitter-zcbuildout/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
(+92 files in other folders)
