[project]
name = "zc.buildout.languageserver"
version = "0.17.1"
description = "A language server for zc.buildout"
readme = "README.md"

keywords = ["buildout", "language-server", "lsp"]
requires-python = ">=3.9"
license = { file = "LICENCE.txt" }
dependencies = [
    "aiohttp",
    "cachetools",
    "packaging",
    "pygls >= 2.0.0",
    "pygments",
    "typing-extensions",
    "zc.buildout",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Framework :: Buildout",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = [
    "aioresponses",
    "coverage",
    "mypy",
    "pylint",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest",
    "types-cachetools",
    "types-pygments",
    "types-setuptools",
    "types-toml",
    "ruff",
]

[project.scripts]
buildoutls = "buildoutls.cli:main"

[project.urls]
"Source code" = "https://github.com/perrinjerome/vscode-zc-buildout/"
"Changelog" = "https://github.com/perrinjerome/vscode-zc-buildout/tree/main/server/CHANGELOG.md"

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.ruff]
indent-width = 2

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 78
known_third_party = ["pydantic", "pygls", "typing_extensions"]

[tool.mypy]
files = ["buildoutls/**/*.py"]
mypy_path = ["stubs"]
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true

[tool.mypy-buildoutls]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true

[tool.mypy-buildoutls.tests]
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if sys.version_info"]
omit = ["buildoutls/bench/*"]
